--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,11 @@ img{
     background:linear-gradient(130deg, rgb(213, 245, 255), rgb(255, 175, 246));
     width: 100%;
     height: 100vh;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas: 'titulo'
-                        'menu_nav'
-                        'leyenda';
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 1;
+    transition: 1s ease-in-out 0s;
 }
 .h1{
     text-align: center;
@@ -45,16 +45,37 @@ img{
     text-transform: uppercase;
     font-size: 4.5rem;
     display: flex;
+    padding: 1rem 2rem;
     justify-content: center;
     align-items: center;
     color: #1b4644c1;
 }
 
+.menu{
+    display: block;
+    position: sticky;
+    top: 1rem;
+    font-size: 7rem;
+    margin-left: 2rem;
+    margin-top: -3rem;
+    color: #1b4644c1;
+    line-height: 1rem;
+    cursor: pointer;
+    -webkit-tap-highlight-color: rgba(255, 222, 173, 0);
+}
+
 .nav{
-    grid-area: menu_nav;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-direction: column;
+    height: 0rem;
+    overflow: hidden;
+    transition: 1s ease-in-out 0s;
+    
+}
+.display_nav{
+   height: 40vh;
+  
 }
 .nav a{
     font-size: 1.7rem;
@@ -62,19 +83,20 @@ img{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 2vh;
-    color:#888888;
+    padding: 1.5rem;
+    color:#1b464483;
     text-transform: uppercase;
+    -webkit-tap-highlight-color: rgba(255, 222, 173, 0);
 }
 .leyenda{
-    grid-area: leyenda;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     display: flex;
     width: 60%;
-    margin: 0 auto;
+    margin: 1rem auto;
     font-weight: 700;
-    color: #434343;
+    color: #1b4644c1;
 }
 .p{
     font-family:'fuente';
@@ -82,4 +104,18 @@ img{
     font-size: 1.3rem;
     text-transform: uppercase;
     line-height: 2.5rem;
+}
+.icono{
+    font-size: 2rem;
+}
+.iconos{
+    background-color: #8dafad00;
+    width: 15rem;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
+.main{
+    height: 100vh;
 }
